Working JWT Gateway server